PAX WEB 606 Servlet Bridge for Pax Web HTTP Service -Still working on trying to get integration tests to work.